--- a/EDA2018.ipynb
+++ b/EDA2018.ipynb
@@ -1281,11 +1281,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 260,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On peut voir ici que les catégories qui ont le plus gros taux de réussite sont Théatre (59.9%), Dance (62.0%) et Comics (54.0%).\n"
+     ]
+    }
+   ],
    "source": [
-    "On peut voir ici que les catégories qui ont le plus gros taux de réussite sont Music, Théatre, Art, Dance et Comics.\n",
-    "Au contraire, ceux avec le plus petit taux sont Food, Craft, Fashion, Technology et Journalism"
+    "# Calcul des taux de réussite par catégorie les plus élevés\n",
+    "\n",
+    "tea1 = df['name'][(df['main_category'] == 'Theater') & (df['success'] == True)].count()\n",
+    "tea2 = df['name'][df['main_category'] == 'Theater'].count()\n",
+    "taux1 = tea1 / tea2 *100\n",
+    "\n",
+    "\n",
+    "com1 = df['name'][(df['main_category'] == 'Comics') & (df['success'] == True)].count()\n",
+    "com2 = df['name'][df['main_category'] == 'Comics'].count()\n",
+    "taux2 = com1 / com2 *100\n",
+    "\n",
+    "dan1 = df['name'][(df['main_category'] == 'Dance') & (df['success'] == True)].count()\n",
+    "dan2 = df['name'][df['main_category'] == 'Dance'].count()\n",
+    "taux3 = dan1 / dan2 *100\n",
+    "\n",
+    "print(\"On peut voir ici que les catégories qui ont le plus gros taux de réussite sont Théatre ({}%), Dance ({}%) et Comics ({}%).\".format(taux1.round(1), taux3.round(1), taux2.round(1)))"
    ]
   },
   {
@@ -1320,7 +1344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On observe que les categories qui ont le plus de backers correspondent aux categories qui ont le plus gros taux de réussite"
+    "On observe que les categories qui ont le plus de backers correspondent aux categories qui ont le plus gros taux de réussite (Comics, Theater et Dance). On peut en déduire que les catégories et les backers sont deux paramètres importants dans la réussite d'un projet Kickstarter."
    ]
   },
   {
@@ -1361,17 +1385,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 263,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taux USD : 37.0, Taux GBP : 35.4, Taux CAD : 27.7, Taux EUR : 22.3\n"
+     ]
+    }
+   ],
    "source": [
-    "La monnaie n'est pas une variable déterminante dans la réussite ou non d'un projet. On peut tout de même noter que le dollar américain est la livre sterling ont un meilleur taux de réussite que l'Euro ou le dollar canadien et australien"
+    "# Calcul des taux de réussite les plus élevés par devise\n",
+    "\n",
+    "ame1 = df['name'][(df['currency'] == 'USD') & (df['success'] == True)].count()\n",
+    "ame2 = df['name'][df['currency'] == 'USD'].count()\n",
+    "taux1 = ame1 / ame2 *100\n",
+    "\n",
+    "gbp1 = df['name'][(df['currency'] == 'GBP') & (df['success'] == True)].count()\n",
+    "gbp2 = df['name'][df['currency'] == 'GBP'].count()\n",
+    "taux2 = gbp1 / gbp2 *100\n",
+    "\n",
+    "cad1 = df['name'][(df['currency'] == 'CAD') & (df['success'] == True)].count()\n",
+    "cad2 = df['name'][df['currency'] == 'CAD'].count()\n",
+    "taux3 = cad1 / cad2 *100\n",
+    "\n",
+    "eur1 = df['name'][(df['currency'] == 'EUR') & (df['success'] == True)].count()\n",
+    "eur2 = df['name'][df['currency'] == 'EUR'].count()\n",
+    "taux4 = eur1 / eur2 *100\n",
+    "\n",
+    "print(\"Taux USD : {}, Taux GBP : {}, Taux CAD : {}, Taux EUR : {}\".format(taux1.round(1), taux2.round(1), taux3.round(1), taux4.round(1)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Objectif atteind et réussite"
+    "La monnaie n'est pas une variable déterminante dans la réussite ou non d'un projet. Il faut aussi noter que le fait que comme une très grande majorité des projets sont proposé en dollar américain, il est difficile de faire un comparatif avec les autres monnaies. On peut tout de même noter que le dollar américain est la livre sterling ont un meilleur taux de réussite que l'Euro ou le dollar canadien et australien."
    ]
   },
   {
@@ -1415,6 +1467,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ce graphique montre une statistique très parlante, et très logique à la fois. En effet, lorsqu'un projet obtient un financement égal ou supérieur à l'objectif fixé, le projet est réalisé dans 97.8% du temps. Ce qui paraît normal, mais il est important de préciser que si vous souhaitez que votre projet soit réalisé, il y a de très grandes chances que votre projet doit être financé à hauteur de l'objectif fixé."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion"
    ]
   },
@@ -1422,15 +1481,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lorem ipsum dolor sit amet"
+    "Nous avons parcouru et analysé beaucoup de données. Cependant, les variables qui ressortent le plus pour prédire la réussite d'un projet sont :\n",
+    "- la catégorie de votre projet\n",
+    "- le nombre de personnes qui soutiennent votre projet\n",
+    "- la devise utilisée\n",
+    "- réussire à atteindre l'objextif financier que vous vous étiez fixé"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
