--- a/EDA2018.ipynb
+++ b/EDA2018.ipynb
@@ -1484,6 +1484,7 @@
     "Nous avons parcouru et analysé beaucoup de données. Cependant, les variables qui ressortent le plus pour prédire la réussite d'un projet sont :\n",
     "- la catégorie de votre projet\n",
     "- le nombre de personnes qui soutiennent votre projet\n",
+    "- le montant fixé\n",
     "- la devise utilisée\n",
     "- réussire à atteindre l'objextif financier que vous vous étiez fixé"
    ]
